--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "mocha test --recursive"
   },
   "dependencies": {
+    "@types/tv4": "^1.2.28",
     "argon2": "^0.15.0",
     "async": "^2.1.4",
     "async-es": "^2.1.4",
