--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glaucoma_risk_calc_rest_api",
-  "version": "0.0.3-alpha",
+  "version": "0.0.4",
   "description": "REST API backend written on Node.JS in TypeScript with restify and waterline.",
   "main": "main.js",
   "author": "Samuel Marks <samuelmarks@gmail.com>",
@@ -13,30 +13,36 @@
     "test": "mocha test --recursive"
   },
   "dependencies": {
+    "@types/async": "^2.0.38",
+    "@types/node": "^7.0.8",
+    "@types/redis": "^0.12.36",
+    "@types/restify": "^2.0.41",
     "@types/tv4": "^1.2.28",
+    "@types/uuid": "^2.0.29",
     "argon2": "^0.15.0",
     "async": "^2.1.4",
     "async-es": "^2.1.4",
     "bunyan": "^1.8.5",
-    "faker": "^3.1.0",
+    "faker": "^4.1.0",
     "hiredis": "^0.5.0",
-    "mocha": "^3.2.0",
-    "nedb": "^1.8.0",
     "nodejs-utils": "https://api.github.com/repos/SamuelMarks/nodejs-utils-dist/tarball",
     "redis": "^2.6.5",
     "restify": "^4.3.0",
     "restify-errors": "https://api.github.com/repos/SamuelMarks/restify-errors-dist/tarball",
     "restify-utils": "https://api.github.com/repos/SamuelMarks/restify-utils-dist/tarball",
     "restify-validators": "https://api.github.com/repos/SamuelMarks/restify-validators-dist/tarball",
-    "sails-tingo": "^0.11.5-alpha4",
-    "tingodb": "^0.5.1",
     "tv4": "^1.2.7",
     "uuid": "^3.0.1",
     "waterline": "^0.12.2",
-    "waterline-nedb": "https://api.github.com/repos/andyhu/waterline-nedb/tarball",
     "waterline-postgresql": "^0.14.8"
   },
   "devDependencies": {
+    "@types/bunyan": "0.0.36",
+    "@types/chai": "^3.4.35",
+    "@types/faker": "^3.1.32",
+    "@types/mocha": "^2.2.40",
+    "@types/superagent": "^2.0.36",
+    "@types/supertest": "^2.0.0",
     "chai": "^3.5.0",
     "chai-json-schema": "^1.4.0",
     "mocha": "^3.2.0",
