--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "glaucoma_risk_calc_rest_api",
+  "name": "glaucoma-risk-calculator-rest-api",
   "version": "0.0.11",
   "description": "REST API backend written on Node.JS in TypeScript with restify and waterline.",
   "main": "main.js",
   "author": "Samuel Marks <samuel@offscale.io>",
   "repository": {
-    "url": "https://github.com/SamuelMarks/restify_waterline_scaffold"
+    "type": "git",
+    "url": "https://github.com/glaucoma-australia/glaucoma-risk-calculator-rest-api.git"
   },
   "license": "Apache-2.0",
   "scripts": {
@@ -18,8 +19,9 @@
     "async-es": "^2.3.0",
     "bunyan": "^1.8.10",
     "faker": "^4.1.0",
-    "glaucoma-risk-quiz-engine": "https://api.github.com/repos/glaucoma-australia/glaucoma-risk-calculator-engine-dist/tarball",
+    "glaucoma-risk-calculator-engine": "https://api.github.com/repos/glaucoma-australia/glaucoma-risk-calculator-engine-dist/tarball",
     "hiredis": "^0.5.0",
+    "mathjs": "^3.11.5",
     "nodejs-utils": "https://api.github.com/repos/SamuelMarks/nodejs-utils-dist/tarball",
     "redis": "^2.7.1",
     "restify": "^4.3.0",
@@ -36,6 +38,7 @@
     "@types/bunyan": "0.0.36",
     "@types/chai": "^3.5.0",
     "@types/faker": "^4.1.0",
+    "@types/mathjs": "0.0.34",
     "@types/mocha": "^2.2.40",
     "@types/node": "^7.0.12",
     "@types/redis": "^0.12.36",
