--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glaucoma-risk-calculator-rest-api",
-  "version": "0.0.13-beta",
+  "version": "0.0.14",
   "description": "REST API backend written on Node.JS in TypeScript with restify and waterline.",
   "main": "main.js",
   "author": "Samuel Marks <samuel@offscale.io>",
@@ -14,14 +14,14 @@
     "test": "mocha test --recursive"
   },
   "dependencies": {
-    "argon2": "^0.15.0",
-    "async": "^2.4.0",
-    "async-es": "^2.4.0",
+    "argon2": "~0.15.0",
+    "async": "^2.4.1",
+    "async-es": "^2.4.1",
     "bunyan": "^1.8.10",
     "faker": "^4.1.0",
     "glaucoma-risk-calculator-engine": "https://api.github.com/repos/glaucoma-australia/glaucoma-risk-calculator-engine-dist/tarball",
     "hiredis": "^0.5.0",
-    "mathjs": "^3.13.1",
+    "mathjs": "^3.13.3",
     "nodejs-utils": "https://api.github.com/repos/SamuelMarks/nodejs-utils-dist/tarball",
     "redis": "^2.7.1",
     "restify": "^4.3.0",
@@ -35,23 +35,23 @@
   },
   "devDependencies": {
     "@types/async": "^2.0.40",
-    "@types/bunyan": "0.0.36",
-    "@types/chai": "^3.5.2",
+    "@types/bunyan": "0.0.37",
+    "@types/chai": "^4.0.0",
     "@types/faker": "^4.1.0",
     "@types/mathjs": "0.0.34",
     "@types/mocha": "^2.2.41",
-    "@types/node": "^7.0.18",
-    "@types/redis": "^0.12.36",
-    "@types/restify": "^4.3.1",
-    "@types/superagent": "^2.0.36",
+    "@types/node": "^7.0.29",
+    "@types/redis": "^2.6.0",
+    "@types/restify": "^4.3.3",
+    "@types/superagent": "^2.0.37",
     "@types/supertest": "^2.0.0",
     "@types/tv4": "^1.2.28",
-    "@types/uuid": "^2.0.29",
-    "chai": "^3.5.0",
+    "@types/uuid": "^3.0.0",
+    "chai": "^4.0.2",
     "chai-json-schema": "^1.4.0",
-    "mocha": "^3.4.1",
+    "mocha": "^3.4.2",
     "supertest": "^3.0.0",
-    "ts-node": "^3.0.4",
-    "typescript": "^2.3.2"
+    "ts-node": "^3.0.6",
+    "typescript": "^2.3.4"
   }
 }
