Major upgrade of all dependencies. Increased type safety everywhere.

--- a/package.json
+++ b/package.json
@@ -1,57 +1,62 @@
 {
-  "name": "glaucoma-risk-calculator-rest-api",
-  "version": "0.0.15",
-  "description": "REST API backend written on Node.JS in TypeScript with restify and waterline.",
-  "main": "main.js",
-  "author": "Samuel Marks <samuel@offscale.io>",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/glaucoma-australia/glaucoma-risk-calculator-rest-api.git"
-  },
-  "license": "Apache-2.0",
-  "scripts": {
-    "start": "node main.js | bunyan",
-    "test": "mocha test --recursive"
-  },
-  "dependencies": {
-    "argon2": "^0.16.1",
-    "async": "^2.5.0",
-    "async-es": "^2.5.0",
-    "bunyan": "^1.8.10",
-    "faker": "^4.1.0",
-    "glaucoma-risk-calculator-engine": "https://api.github.com/repos/glaucoma-australia/glaucoma-risk-calculator-engine-dist/tarball",
-    "hiredis": "^0.5.0",
-    "mathjs": "^3.14.1",
-    "nodejs-utils": "https://api.github.com/repos/SamuelMarks/nodejs-utils-dist/tarball",
-    "redis": "^2.7.1",
-    "restify": "^5.0.0",
-    "restify-errors": "https://api.github.com/repos/SamuelMarks/restify-errors-dist/tarball",
-    "restify-utils": "https://api.github.com/repos/SamuelMarks/restify-utils-dist/tarball",
-    "restify-validators": "https://api.github.com/repos/SamuelMarks/restify-validators-dist/tarball",
-    "tv4": "^1.3.0",
-    "uuid": "^3.1.0",
-    "waterline": "^0.12.2",
-    "waterline-postgresql": "^0.14.8"
-  },
-  "devDependencies": {
-    "@types/async": "^2.0.40",
-    "@types/bunyan": "1.8.0",
-    "@types/chai": "^4.0.1",
-    "@types/faker": "^4.1.0",
-    "@types/mathjs": "0.0.34",
-    "@types/mocha": "^2.2.41",
-    "@types/node": "^8.0.7",
-    "@types/redis": "^2.6.0",
-    "@types/restify": "^4.3.4",
-    "@types/superagent": "^3.5.2",
-    "@types/supertest": "^2.0.1",
-    "@types/tv4": "^1.2.28",
-    "@types/uuid": "^3.0.0",
-    "chai": "^4.0.2",
-    "chai-json-schema": "^1.4.0",
-    "mocha": "^3.4.2",
-    "supertest": "^3.0.0",
-    "ts-node": "^3.1.0",
-    "typescript": "^2.4.1"
-  }
+    "name": "glaucoma-risk-calculator-rest-api",
+    "version": "0.0.16",
+    "description": "REST API backend written on Node.JS in TypeScript with restify and waterline.",
+    "main": "main.js",
+    "author": "Samuel Marks <samuel@offscale.io>",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/glaucoma-australia/glaucoma-risk-calculator-rest-api.git"
+    },
+    "license": "Apache-2.0",
+    "scripts": {
+        "start": "node main.js | bunyan",
+        "test": "mocha test --recursive"
+    },
+    "dependencies": {
+        "argon2": "^0.16.1",
+        "async": "^2.5.0",
+        "async-es": "^2.5.0",
+        "bunyan": "^1.8.10",
+        "custom-restify-errors": "https://api.github.com/repos/SamuelMarks/custom-restify-errors-dist/tarball",
+        "faker": "^4.1.0",
+        "glaucoma-risk-calculator-engine": "https://api.github.com/repos/glaucoma-australia/glaucoma-risk-calculator-engine-dist/tarball",
+        "hiredis": "^0.5.0",
+        "ioredis": "^3.1.1",
+        "mathjs": "^3.14.2",
+        "nodejs-utils": "https://api.github.com/repos/SamuelMarks/nodejs-utils-dist/tarball",
+        "redis": "^2.7.1",
+        "restify": "^5.0.0",
+        "restify-errors": "^4.3.0",
+        "restify-utils": "https://api.github.com/repos/SamuelMarks/restify-utils-dist/tarball/nosampledata",
+        "restify-validators": "https://api.github.com/repos/SamuelMarks/restify-validators-dist/tarball",
+        "tv4": "^1.3.0",
+        "uuid": "^3.1.0",
+        "waterline": "https://api.github.com/repos/SamuelMarks/waterline/tarball/c91bdf46d400180ae7e800f684f8fb44f8fed9a5",
+        "waterline-postgresql": "^0.14.8"
+    },
+    "devDependencies": {
+        "@types/async": "^2.0.40",
+        "@types/bunyan": "1.8.0",
+        "@types/chai": "^4.0.1",
+        "@types/faker": "^4.1.0",
+        "@types/ioredis": "0.0.23",
+        "@types/mathjs": "0.0.34",
+        "@types/mocha": "^2.2.41",
+        "@types/node": "^8.0.10",
+        "@types/redis": "^2.6.0",
+        "@types/restify": "^5.0.0",
+        "@types/restify-errors": "^4.3.1",
+        "@types/superagent": "^3.5.2",
+        "@types/supertest": "^2.0.1",
+        "@types/tv4": "^1.2.28",
+        "@types/uuid": "^3.0.0",
+        "chai": "^4.1.0",
+        "chai-json-schema": "^1.4.0",
+        "chai-json-schema-ajv": "^0.2.4",
+        "mocha": "^3.4.2",
+        "supertest": "^3.0.0",
+        "ts-node": "^3.2.0",
+        "typescript": "^2.4.1"
+    }
 }
