--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
         "redis": "^2.7.1",
         "restify": "^5.0.0",
         "restify-errors": "^4.3.0",
-        "restify-utils": "https://api.github.com/repos/SamuelMarks/restify-utils-dist/tarball/nosampledata",
         "restify-validators": "https://api.github.com/repos/SamuelMarks/restify-validators-dist/tarball",
+        "restify-waterline-utils": "https://api.github.com/repos/SamuelMarks/restify-waterline-utils-dist/tarball",
         "tv4": "^1.3.0",
         "uuid": "^3.1.0",
         "waterline": "https://api.github.com/repos/SamuelMarks/waterline/tarball/c91bdf46d400180ae7e800f684f8fb44f8fed9a5",
