--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "glaucoma-risk-calculator-rest-api",
-    "version": "0.0.19",
+    "version": "0.0.20",
     "description": "REST API backend written on Node.JS in TypeScript with restify and waterline.",
     "main": "main.js",
     "author": "Samuel Marks <samuel@offscale.io>",
@@ -23,13 +23,13 @@
         "glaucoma-risk-calculator-engine": "https://api.github.com/repos/glaucoma-australia/glaucoma-risk-calculator-engine-dist/tarball",
         "hiredis": "^0.5.0",
         "ioredis": "^3.1.2",
-        "mathjs": "^3.15.0",
+        "mathjs": "^3.16.0",
         "nodejs-utils": "https://api.github.com/repos/SamuelMarks/nodejs-utils-dist/tarball",
-        "redis": "^2.7.1",
+        "redis": "^2.8.0",
         "restify": "^5.0.1",
         "restify-errors": "^4.3.0",
         "restify-validators": "https://api.github.com/repos/SamuelMarks/restify-validators-dist/tarball",
-        "restify-waterline-utils": "https://api.github.com/repos/SamuelMarks/restify-waterline-utils-dist/tarball",
+        "restify-orm-framework": "https://api.github.com/repos/SamuelMarks/restify-orm-framework-dist/tarball",
         "tv4": "^1.3.0",
         "uuid": "^3.1.0",
         "waterline": "https://api.github.com/repos/SamuelMarks/waterline/tarball/c91bdf46d400180ae7e800f684f8fb44f8fed9a5",
@@ -37,13 +37,13 @@
     },
     "devDependencies": {
         "@types/async": "^2.0.40",
-        "@types/bunyan": "1.8.0",
+        "@types/bunyan": "1.8.1",
         "@types/chai": "^4.0.2",
         "@types/faker": "^4.1.0",
         "@types/ioredis": "0.0.24",
         "@types/mathjs": "0.0.34",
         "@types/mocha": "^2.2.41",
-        "@types/node": "^8.0.19",
+        "@types/node": "^8.0.20",
         "@types/redis": "^2.6.0",
         "@types/restify": "^5.0.1",
         "@types/restify-errors": "^4.3.1",
@@ -51,7 +51,7 @@
         "@types/supertest": "^2.0.2",
         "@types/tv4": "^1.2.28",
         "@types/uuid": "^3.4.0",
-        "chai": "^4.1.0",
+        "chai": "^4.1.1",
         "chai-json-schema": "^1.5.0",
         "chai-json-schema-ajv": "^0.2.4",
         "mocha": "^3.5.0",
