--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "bunyan": "^1.8.12",
         "custom-restify-errors": "https://api.github.com/repos/SamuelMarks/custom-restify-errors-dist/tarball",
         "faker": "^4.1.0",
-        "glaucoma-risk-calculator-engine": "https://api.github.com/repos/glaucoma-australia/glaucoma-risk-calculator-engine-dist/tarball",
+        "glaucoma-risk-calculator-engine": "glaucoma-australia/glaucoma-risk-calculator-engine-dist",
         "hiredis": "^0.5.0",
         "ioredis": "^3.1.4",
         "mathjs": "^3.16.3",
@@ -43,19 +43,19 @@
         "@types/faker": "^4.1.1",
         "@types/ioredis": "0.0.25",
         "@types/mathjs": "0.0.35",
-        "@types/mocha": "^2.2.42",
-        "@types/node": "^8.0.26",
+        "@types/mocha": "^2.2.43",
+        "@types/node": "^8.0.28",
         "@types/redis": "^2.6.0",
         "@types/restify": "^5.0.2",
         "@types/restify-errors": "^4.3.2",
         "@types/superagent": "^3.5.5",
         "@types/supertest": "^2.0.3",
         "@types/tv4": "^1.2.28",
-        "@types/uuid": "^3.4.1",
+        "@types/uuid": "^3.4.2",
         "chai": "^4.1.2",
         "chai-json-schema": "^1.5.0",
         "chai-json-schema-ajv": "^0.2.4",
-        "mocha": "^3.5.0",
+        "mocha": "^3.5.2",
         "supertest": "^3.0.0",
         "ts-node": "^3.3.0",
         "typescript": "^2.5.2"
