--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "bunyan": "^1.8.12",
         "custom-restify-errors": "https://api.github.com/repos/SamuelMarks/custom-restify-errors-dist/tarball",
         "faker": "^4.1.0",
-        "glaucoma-risk-calculator-engine": "glaucoma-australia/glaucoma-risk-calculator-engine-dist",
+        "glaucoma-risk-calculator-engine": "https://api.github.com/repos/glaucoma-australia/glaucoma-risk-calculator-engine-dist/tarball",
         "hiredis": "^0.5.0",
         "ioredis": "^3.1.4",
         "mathjs": "^3.16.3",
