--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "glaucoma-risk-calculator-rest-api",
-    "version": "0.0.27",
+    "version": "0.0.28",
     "description": "REST API backend written on Node.JS in TypeScript with restify and waterline.",
     "main": "main.js",
     "author": "Samuel Marks <samuel@offscale.io>",
@@ -14,7 +14,7 @@
         "test": "mocha test --recursive"
     },
     "dependencies": {
-        "argon2": "^0.17.2",
+        "argon2": "0.17.3",
         "async": "^2.6.0",
         "async-es": "^2.6.0",
         "bunyan": "^1.8.12",
@@ -23,12 +23,12 @@
         "glaucoma-risk-calculator-engine": "https://api.github.com/repos/glaucoma-australia/glaucoma-risk-calculator-engine-dist/tarball",
         "hiredis": "^0.5.0",
         "ioredis": "^3.2.2",
-        "mathjs": "^3.20.1",
+        "mathjs": "^4.1.2",
         "orm-mw": "https://api.github.com/repos/SamuelMarks/orm-mw-dist/tarball",
         "nodejs-utils": "https://api.github.com/repos/SamuelMarks/nodejs-utils-dist/tarball",
         "redis": "^2.8.0",
-        "restify": "^6.3.4",
-        "restify-errors": "^5.0.0",
+        "restify": "^7.1.1",
+        "restify-errors": "^6.0.0",
         "restify-validators": "https://api.github.com/repos/SamuelMarks/restify-validators-dist/tarball",
         "routes-merger": "https://api.github.com/repos/SamuelMarks/routes-merger-dist/tarball",
         "tv4": "^1.3.0",
@@ -37,27 +37,27 @@
         "waterline-postgresql": "^0.50.0"
     },
     "devDependencies": {
-        "@types/async": "^2.0.47",
+        "@types/async": "^2.0.49",
         "@types/bunyan": "1.8.4",
-        "@types/chai": "^4.1.2",
+        "@types/chai": "^4.1.3",
         "@types/faker": "^4.1.2",
-        "@types/ioredis": "3.2.5",
-        "@types/mathjs": "0.0.37",
-        "@types/mocha": "^2.2.48",
-        "@types/node": "^9.4.0",
-        "@types/redis": "^2.8.5",
+        "@types/ioredis": "3.2.7",
+        "@types/mathjs": "3.20.0",
+        "@types/mocha": "^5.2.0",
+        "@types/node": "^9.6.6",
+        "@types/redis": "^2.8.6",
         "@types/restify": "^5.0.7",
         "@types/restify-errors": "^4.3.2",
-        "@types/superagent": "^3.5.7",
+        "@types/superagent": "^3.5.8",
         "@types/supertest": "^2.0.4",
-        "@types/tv4": "^1.2.28",
+        "@types/tv4": "^1.2.29",
         "@types/uuid": "^3.4.3",
         "chai": "^4.1.2",
         "chai-json-schema": "^1.5.0",
-        "chai-json-schema-ajv": "^2.0.0",
-        "mocha": "^5.0.0",
+        "chai-json-schema-ajv": "^3.0.0",
+        "mocha": "^5.1.1",
         "supertest": "^3.0.0",
-        "ts-node": "^4.1.0",
-        "typescript": "^2.7.1"
+        "ts-node": "^6.0.0",
+        "typescript": "^2.8.3"
     }
 }
