--- a/package.json
+++ b/package.json
@@ -1,64 +1,64 @@
 {
-    "name": "glaucoma-risk-calculator-rest-api",
-  "version": "0.0.30",
-    "description": "REST API backend written on Node.JS in TypeScript with restify and waterline.",
-    "main": "main.js",
-    "author": "Samuel Marks <samuel@offscale.io>",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/glaucoma-australia/glaucoma-risk-calculator-rest-api.git"
-    },
-    "license": "Apache-2.0",
-    "scripts": {
-        "start": "node main.js | bunyan",
-        "test": "mocha test --recursive"
-    },
-    "dependencies": {
-      "ajv": "^6.4.0",
-      "argon2": "0.18.3",
-        "async": "^2.6.0",
-        "async-es": "^2.6.0",
-        "bunyan": "^1.8.12",
-        "custom-restify-errors": "https://api.github.com/repos/SamuelMarks/custom-restify-errors-dist/tarball",
-        "faker": "^4.1.0",
-        "glaucoma-risk-calculator-engine": "https://api.github.com/repos/glaucoma-australia/glaucoma-risk-calculator-engine-dist/tarball",
-        "hiredis": "^0.5.0",
-        "ioredis": "^3.2.2",
-      "mathjs": "^4.2.1",
-      "nodejs-utils": "https://api.github.com/repos/SamuelMarks/nodejs-utils-dist/tarball",
-        "orm-mw": "https://api.github.com/repos/SamuelMarks/orm-mw-dist/tarball",
-        "redis": "^2.8.0",
-        "restify": "^7.1.1",
-        "restify-errors": "^6.0.0",
-        "restify-validators": "https://api.github.com/repos/SamuelMarks/restify-validators-dist/tarball",
-        "routes-merger": "https://api.github.com/repos/SamuelMarks/routes-merger-dist/tarball",
-        "tv4": "^1.3.0",
-        "uuid": "^3.2.1",
-        "waterline": "https://api.github.com/repos/SamuelMarks/waterline/tarball/c91bdf46d400180ae7e800f684f8fb44f8fed9a5",
-        "waterline-postgresql": "^0.50.0"
-    },
-    "devDependencies": {
-        "@types/async": "^2.0.49",
-        "@types/bunyan": "1.8.4",
-        "@types/chai": "^4.1.3",
-        "@types/faker": "^4.1.2",
-        "@types/ioredis": "3.2.7",
-        "@types/mathjs": "3.20.0",
-        "@types/mocha": "^5.2.0",
-      "@types/node": "^10.0.2",
-        "@types/redis": "^2.8.6",
-        "@types/restify": "^5.0.7",
-        "@types/restify-errors": "^4.3.2",
-        "@types/superagent": "^3.5.8",
-        "@types/supertest": "^2.0.4",
-        "@types/tv4": "^1.2.29",
-        "@types/uuid": "^3.4.3",
-        "chai": "^4.1.2",
-        "chai-json-schema": "^1.5.0",
-        "chai-json-schema-ajv": "^3.0.0",
-        "mocha": "^5.1.1",
-        "supertest": "^3.0.0",
-      "ts-node": "^6.0.2",
-        "typescript": "^2.8.3"
-    }
+  "name": "glaucoma-risk-calculator-rest-api",
+  "version": "0.0.31-alpha",
+  "description": "REST API backend written on Node.JS in TypeScript with restify and waterline.",
+  "main": "main.js",
+  "author": "Samuel Marks <samuel@offscale.io>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/glaucoma-australia/glaucoma-risk-calculator-rest-api.git"
+  },
+  "license": "Apache-2.0",
+  "scripts": {
+    "start": "node main.js | bunyan",
+    "test": "mocha test --recursive"
+  },
+  "dependencies": {
+    "ajv": "^6.4.0",
+    "argon2": "0.18.3",
+    "async": "^2.6.0",
+    "async-es": "^2.6.0",
+    "bunyan": "^1.8.12",
+    "custom-restify-errors": "https://api.github.com/repos/SamuelMarks/custom-restify-errors-dist/tarball",
+    "faker": "^4.1.0",
+    "glaucoma-risk-calculator-engine": "https://api.github.com/repos/glaucoma-australia/glaucoma-risk-calculator-engine-dist/tarball",
+    "hiredis": "^0.5.0",
+    "ioredis": "^3.2.2",
+    "mathjs": "^4.2.1",
+    "nodejs-utils": "https://api.github.com/repos/SamuelMarks/nodejs-utils-dist/tarball",
+    "orm-mw": "https://api.github.com/repos/SamuelMarks/orm-mw-dist/tarball",
+    "redis": "^2.8.0",
+    "restify": "^7.1.1",
+    "restify-errors": "^6.0.0",
+    "restify-validators": "https://api.github.com/repos/SamuelMarks/restify-validators-dist/tarball",
+    "routes-merger": "https://api.github.com/repos/SamuelMarks/routes-merger-dist/tarball",
+    "tv4": "^1.3.0",
+    "uuid": "^3.2.1",
+    "waterline": "https://api.github.com/repos/SamuelMarks/waterline/tarball/c91bdf46d400180ae7e800f684f8fb44f8fed9a5",
+    "waterline-postgresql": "^0.50.0"
+  },
+  "devDependencies": {
+    "@types/async": "^2.0.49",
+    "@types/bunyan": "1.8.4",
+    "@types/chai": "^4.1.3",
+    "@types/faker": "^4.1.2",
+    "@types/ioredis": "3.2.7",
+    "@types/mathjs": "3.20.0",
+    "@types/mocha": "^5.2.0",
+    "@types/node": "^10.0.2",
+    "@types/redis": "^2.8.6",
+    "@types/restify": "^5.0.7",
+    "@types/restify-errors": "^4.3.2",
+    "@types/superagent": "^3.5.8",
+    "@types/supertest": "^2.0.4",
+    "@types/tv4": "^1.2.29",
+    "@types/uuid": "^3.4.3",
+    "chai": "^4.1.2",
+    "chai-json-schema": "^1.5.0",
+    "chai-json-schema-ajv": "^3.0.0",
+    "mocha": "^5.1.1",
+    "supertest": "^3.0.0",
+    "ts-node": "^6.0.2",
+    "typescript": "^2.8.3"
+  }
 }
