Updated dependencies; fixed one auth test; added client_secret

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glaucoma-risk-calculator-rest-api",
-  "version": "0.0.31-beta",
+  "version": "0.0.31-gamma",
   "description": "REST API backend written on Node.JS in TypeScript with restify and waterline.",
   "main": "main.js",
   "author": "Samuel Marks <samuel@offscale.io>",
@@ -14,8 +14,8 @@
     "test": "mocha test --recursive"
   },
   "dependencies": {
-    "ajv": "^6.4.0",
-    "argon2": "0.18.3",
+    "ajv": "^6.5.0",
+    "argon2": "0.19.2",
     "async": "^2.6.0",
     "async-es": "^2.6.0",
     "bunyan": "^1.8.12",
@@ -24,7 +24,7 @@
     "glaucoma-risk-calculator-engine": "https://api.github.com/repos/glaucoma-australia/glaucoma-risk-calculator-engine-dist/tarball",
     "hiredis": "^0.5.0",
     "ioredis": "^3.2.2",
-    "mathjs": "^4.2.1",
+    "mathjs": "^4.2.2",
     "nodejs-utils": "https://api.github.com/repos/SamuelMarks/nodejs-utils-dist/tarball",
     "orm-mw": "https://api.github.com/repos/SamuelMarks/orm-mw-dist/tarball",
     "redis": "^2.8.0",
@@ -45,7 +45,7 @@
     "@types/ioredis": "3.2.7",
     "@types/mathjs": "3.20.0",
     "@types/mocha": "^5.2.0",
-    "@types/node": "^10.0.2",
+    "@types/node": "^10.0.9",
     "@types/redis": "^2.8.6",
     "@types/restify": "^5.0.7",
     "@types/restify-errors": "^4.3.2",
@@ -57,8 +57,8 @@
     "chai-json-schema": "^1.5.0",
     "chai-json-schema-ajv": "^3.0.0",
     "mocha": "^5.1.1",
-    "supertest": "^3.0.0",
-    "ts-node": "^6.0.2",
+    "supertest": "^3.1.0",
+    "ts-node": "^6.0.3",
     "typescript": "^2.8.3"
   }
 }
