--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glaucoma-risk-calculator-rest-api",
-  "version": "0.0.34-delta",
+  "version": "0.0.34-epsilon",
   "description": "REST API backend written on Node.JS in TypeScript with restify and waterline.",
   "main": "main.js",
   "author": "Samuel Marks <samuel@offscale.io>",
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "ajv": "^6.5.0",
-    "argon2": "0.19.2",
+    "argon2": "0.19.3",
     "async": "^2.6.1",
     "bunyan": "^1.8.12",
     "custom-restify-errors": "https://api.github.com/repos/SamuelMarks/custom-restify-errors-dist/tarball",
@@ -23,12 +23,12 @@
     "glaucoma-risk-calculator-engine": "https://api.github.com/repos/glaucoma-australia/glaucoma-risk-calculator-engine-dist/tarball",
     "hiredis": "^0.5.0",
     "ioredis": "^3.2.2",
-    "mathjs": "^4.3.0",
+    "mathjs": "^4.4.2",
     "nodejs-utils": "https://api.github.com/repos/SamuelMarks/nodejs-utils-dist/tarball",
     "orm-mw": "https://api.github.com/repos/SamuelMarks/orm-mw-dist/tarball",
     "redis": "^2.8.0",
-    "restify": "^7.2.0",
-    "restify-errors": "^6.0.0",
+    "restify": "^7.2.1",
+    "restify-errors": "^6.1.0",
     "restify-validators": "https://api.github.com/repos/SamuelMarks/restify-validators-dist/tarball",
     "routes-merger": "https://api.github.com/repos/SamuelMarks/routes-merger-dist/tarball",
     "tv4": "^1.3.0",
@@ -43,10 +43,10 @@
     "@types/faker": "^4.1.2",
     "@types/ioredis": "3.2.8",
     "@types/mathjs": "3.21.0",
-    "@types/mocha": "^5.2.0",
-    "@types/node": "^10.1.2",
+    "@types/mocha": "^5.2.1",
+    "@types/node": "^10.3.2",
     "@types/redis": "^2.8.6",
-    "@types/restify": "^5.0.8",
+    "@types/restify": "^7.2.0",
     "@types/restify-errors": "^4.3.2",
     "@types/superagent": "^3.8.0",
     "@types/supertest": "^2.0.4",
@@ -57,7 +57,7 @@
     "chai-json-schema-ajv": "^3.0.0",
     "mocha": "^5.2.0",
     "supertest": "^3.1.0",
-    "ts-node": "^6.0.4",
-    "typescript": "^2.8.3"
+    "ts-node": "^6.1.0",
+    "typescript": "^2.9.1"
   }
 }
