--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glaucoma-risk-calculator-rest-api",
-  "version": "0.0.42",
+  "version": "0.0.43",
   "description": "REST API backend written on Node.JS in TypeScript with restify and waterline.",
   "main": "main.js",
   "author": "Samuel Marks <samuel@offscale.io>",
@@ -24,13 +24,14 @@
     "hiredis": "^0.5.0",
     "ioredis": "^4.6.3",
     "mathjs": "^5.6.0",
+    "morgan": "^1.9.1",
     "nodejs-utils": "https://api.github.com/repos/SamuelMarks/nodejs-utils-dist/tarball",
     "orm-mw": "https://api.github.com/repos/SamuelMarks/orm-mw-dist/tarball",
     "redis": "^2.8.0",
     "restify": "^8.1.0",
     "restify-errors": "^7.0.0",
     "restify-validators": "https://api.github.com/repos/SamuelMarks/restify-validators-dist/tarball",
-    "routes-merger": "https://api.github.com/repos/SamuelMarks/routes-merger-dist/tarball",
+    "routes-merger": "https://api.github.com/repos/SamuelMarks/routes-merger-dist/tarball/master",
     "tv4": "^1.3.0",
     "uuid": "^3.3.2",
     "waterline": "https://api.github.com/repos/SamuelMarks/waterline/tarball/c91bdf46d400180ae7e800f684f8fb44f8fed9a5",
