--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     redis:
         image: redis:alpine
     postgres:
-        image: postgres:11.1-alpine
+        image: postgres:11.2-alpine
         environment:
             POSTGRES_USER: rest_api_user
             POSTGRES_PASSWORD: rest_api_pass
@@ -22,6 +22,6 @@ services:
             REDIS_HOST: redis
             DEFAULT_ADMIN_EMAIL: foo
             DEFAULT_ADMIN_PASSWORD: bar
-        command: ["/bin/wait_for_it.sh", "postgres:5432", "--",
+        command: [#"/bin/wait_for_it.sh", "postgres:5432", "--",
             # "/bin/wait_for_it.sh", "redis:6379", "--",
-                  "npm", "run-script", "build_start"]
+                  "npm", "start"]
