--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glaucoma-risk-calculator-rest-api",
-  "version": "0.0.45",
+  "version": "0.0.46",
   "description": "REST API backend written on Node.JS in TypeScript with restify and waterline.",
   "main": "main.js",
   "author": "Samuel Marks <samuel@offscale.io>",
@@ -22,13 +22,13 @@
     "faker": "^4.1.0",
     "glaucoma-risk-calculator-engine": "https://api.github.com/repos/glaucoma-australia/glaucoma-risk-calculator-engine-dist/tarball",
     "hiredis": "^0.5.0",
-    "ioredis": "^4.6.3",
-    "mathjs": "^5.6.0",
+    "ioredis": "^4.9.1",
+    "mathjs": "^5.8.0",
     "morgan": "^1.9.1",
     "nodejs-utils": "https://api.github.com/repos/SamuelMarks/nodejs-utils-dist/tarball",
     "orm-mw": "https://api.github.com/repos/SamuelMarks/orm-mw-dist/tarball",
     "redis": "^2.8.0",
-    "restify": "^8.1.0",
+    "restify": "^8.2.0",
     "restify-errors": "^7.0.0",
     "restify-validators": "https://api.github.com/repos/SamuelMarks/restify-validators-dist/tarball",
     "routes-merger": "https://api.github.com/repos/SamuelMarks/routes-merger-dist/tarball/master",
@@ -39,15 +39,15 @@
   },
   "devDependencies": {
     "@types/async": "^2.4.1",
-    "@types/bunyan": "1.8.5",
+    "@types/bunyan": "1.8.6",
     "@types/chai": "^4.1.7",
     "@types/faker": "^4.1.5",
-    "@types/ioredis": "4.0.9",
+    "@types/ioredis": "4.0.10",
     "@types/mathjs": "5.0.1",
     "@types/mocha": "^5.2.6",
     "@types/node": "^11.11.0",
-    "@types/redis": "^2.8.10",
-    "@types/restify": "^7.2.8",
+    "@types/redis": "^2.8.11",
+    "@types/restify": "^7.2.9",
     "@types/restify-errors": "^4.3.3",
     "@types/superagent": "^4.1.0",
     "@types/supertest": "^2.0.7",
@@ -58,8 +58,8 @@
     "chai-json-schema": "^1.5.0",
     "chai-json-schema-ajv": "^4.0.0",
     "mocha": "^6.0.2",
-    "supertest": "^4.0.0",
+    "supertest": "^4.0.2",
     "ts-node": "^8.0.3",
-    "typescript": "^3.3.3333"
+    "typescript": "~3.3.3333"
   }
 }
