--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glaucoma-risk-calculator-rest-api",
-  "version": "0.0.47",
+  "version": "0.0.48",
   "description": "REST API backend written on Node.JS in TypeScript with restify and waterline.",
   "main": "main.js",
   "author": "Samuel Marks <samuel@offscale.io>",
@@ -32,6 +32,7 @@
     "restify-errors": "^7.0.0",
     "restify-validators": "https://api.github.com/repos/SamuelMarks/restify-validators-dist/tarball",
     "routes-merger": "https://api.github.com/repos/SamuelMarks/routes-merger-dist/tarball/master",
+    "simple-statistics": "^7.0.2",
     "tv4": "^1.3.0",
     "uuid": "^3.3.2",
     "waterline": "https://api.github.com/repos/SamuelMarks/waterline/tarball/c91bdf46d400180ae7e800f684f8fb44f8fed9a5",
@@ -60,6 +61,6 @@
     "mocha": "^6.0.2",
     "supertest": "^4.0.2",
     "ts-node": "^8.0.3",
-    "typescript": "~3.4.1"
+    "typescript": "~3.4.2"
   }
 }
