--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glaucoma-risk-calculator-rest-api",
-  "version": "0.0.48",
+  "version": "0.0.49",
   "description": "REST API backend written on Node.JS in TypeScript with restify and waterline.",
   "main": "main.js",
   "author": "Samuel Marks <samuel@offscale.io>",
@@ -23,16 +23,17 @@
     "glaucoma-risk-calculator-engine": "https://api.github.com/repos/glaucoma-australia/glaucoma-risk-calculator-engine-dist/tarball",
     "hiredis": "^0.5.0",
     "ioredis": "^4.9.1",
-    "mathjs": "^5.8.0",
+    "mathjs": "^5.9.0",
     "morgan": "^1.9.1",
     "nodejs-utils": "https://api.github.com/repos/SamuelMarks/nodejs-utils-dist/tarball",
     "orm-mw": "https://api.github.com/repos/SamuelMarks/orm-mw-dist/tarball",
     "redis": "^2.8.0",
-    "restify": "^8.2.0",
+    "restify": "^8.3.0",
     "restify-errors": "^7.0.0",
     "restify-validators": "https://api.github.com/repos/SamuelMarks/restify-validators-dist/tarball",
     "routes-merger": "https://api.github.com/repos/SamuelMarks/routes-merger-dist/tarball/master",
     "simple-statistics": "^7.0.2",
+    "ttest": "https://api.github.com/repos/SamuelMarks/ttest/tarball/typescript",
     "tv4": "^1.3.0",
     "uuid": "^3.3.2",
     "waterline": "https://api.github.com/repos/SamuelMarks/waterline/tarball/c91bdf46d400180ae7e800f684f8fb44f8fed9a5",
@@ -46,7 +47,7 @@
     "@types/ioredis": "4.0.10",
     "@types/mathjs": "5.0.1",
     "@types/mocha": "^5.2.6",
-    "@types/node": "^11.13.0",
+    "@types/node": "^11.13.7",
     "@types/redis": "^2.8.12",
     "@types/restify": "^7.2.9",
     "@types/restify-errors": "^4.3.3",
@@ -58,9 +59,9 @@
     "chai": "^4.2.0",
     "chai-json-schema": "^1.5.0",
     "chai-json-schema-ajv": "^4.0.0",
-    "mocha": "^6.0.2",
+    "mocha": "^6.1.4",
     "supertest": "^4.0.2",
-    "ts-node": "^8.0.3",
-    "typescript": "~3.4.2"
+    "ts-node": "^8.1.0",
+    "typescript": "~3.4.4"
   }
 }
