--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glaucoma-risk-calculator-rest-api",
-  "version": "0.0.50",
+  "version": "0.0.51",
   "description": "REST API backend written on Node.JS in TypeScript with restify and waterline.",
   "main": "main.js",
   "author": "Samuel Marks <samuel@offscale.io>",
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "https://github.com/glaucoma-australia/glaucoma-risk-calculator-rest-api.git"
   },
-  "license": "Apache-2.0",
+  "license": "(MIT OR Apache-2.0)",
   "scripts": {
     "start": "node main.js | bunyan",
     "build_start": "rm -rf node_modules; [ -f typings.json ] && typings i; npm i && tsc && node main.js | bunyan",
@@ -16,20 +16,20 @@
   },
   "dependencies": {
     "ajv": "^6.10.0",
-    "argon2": "0.21.0",
-    "async": "^2.6.2",
+    "argon2": "0.23.0",
+    "async": "^3.0.1",
     "custom-restify-errors": "https://api.github.com/repos/SamuelMarks/custom-restify-errors-dist/tarball",
     "faker": "^4.1.0",
     "glaucoma-risk-calculator-engine": "https://api.github.com/repos/glaucoma-australia/glaucoma-risk-calculator-engine-dist/tarball",
     "hiredis": "^0.5.0",
-    "ioredis": "^4.9.1",
-    "mathjs": "^5.9.0",
+    "ioredis": "^4.9.5",
+    "mathjs": "^5.10.3",
     "morgan": "^1.9.1",
     "nodejs-utils": "https://api.github.com/repos/SamuelMarks/nodejs-utils-dist/tarball",
     "orm-mw": "https://api.github.com/repos/SamuelMarks/orm-mw-dist/tarball/master",
     "redis": "^2.8.0",
-    "restify": "^8.3.0",
-    "restify-errors": "^7.0.0",
+    "restify": "^8.3.3",
+    "restify-errors": "^8.0.0",
     "restify-validators": "https://api.github.com/repos/SamuelMarks/restify-validators-dist/tarball",
     "routes-merger": "https://api.github.com/repos/SamuelMarks/routes-merger-dist/tarball/master",
     "simple-statistics": "^7.0.2",
@@ -40,16 +40,16 @@
     "waterline-postgresql": "^0.50.0"
   },
   "devDependencies": {
-    "@types/async": "^2.4.1",
+    "@types/async": "^3.0.0",
     "@types/bunyan": "1.8.6",
     "@types/chai": "^4.1.7",
     "@types/faker": "^4.1.5",
-    "@types/ioredis": "4.0.10",
+    "@types/ioredis": "4.0.11",
     "@types/mathjs": "5.0.1",
-    "@types/mocha": "^5.2.6",
-    "@types/node": "^11.13.7",
-    "@types/redis": "^2.8.12",
-    "@types/restify": "^7.2.9",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.0.7",
+    "@types/redis": "^2.8.13",
+    "@types/restify": "^7.2.11",
     "@types/restify-errors": "^4.3.3",
     "@types/superagent": "^4.1.1",
     "@types/supertest": "^2.0.7",
@@ -57,11 +57,11 @@
     "@types/uuid": "^3.4.4",
     "bunyan": "^1.8.12",
     "chai": "^4.2.0",
-    "chai-json-schema": "^1.5.0",
+    "chai-json-schema": "^1.5.1",
     "chai-json-schema-ajv": "^4.0.0",
     "mocha": "^6.1.4",
     "supertest": "^4.0.2",
-    "ts-node": "^8.1.0",
-    "typescript": "~3.4.4"
+    "ts-node": "^8.2.0",
+    "typescript": "~3.5.1"
   }
 }
