--- a/package.json
+++ b/package.json
@@ -29,15 +29,14 @@
     "ioredis": "^4.11.2",
     "mathjs": "^6.0.3",
     "morgan": "^1.9.1",
+    "pg": "^7.12.0",
     "redis": "^2.8.0",
     "restify": "^8.3.3",
     "restify-errors": "^8.0.1",
     "simple-statistics": "^7.0.5",
     "ttest": "SamuelMarks/ttest#typescript",
     "tv4": "^1.3.0",
-    "uuid": "^3.3.2",
-    "waterline": "https://api.github.com/repos/SamuelMarks/waterline/tarball/c91bdf46d400180ae7e800f684f8fb44f8fed9a5",
-    "waterline-postgresql": "^0.50.0"
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@types/async": "^3.0.1",
