--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "mocha test --recursive"
   },
   "dependencies": {
-    "@offscale/custom-restify-errors": "^0.0.4",
+    "@offscale/custom-restify-errors": "^0.0.5",
     "@offscale/nodejs-utils": "^0.0.9",
     "@offscale/orm-mw": "^0.0.8",
     "@offscale/restify-validators": "^0.0.3",
@@ -31,6 +31,7 @@
     "morgan": "^1.9.1",
     "pg": "^7.12.0",
     "redis": "^2.8.0",
+    "reflect-metadata": "^0.1.13",
     "restify": "^8.3.3",
     "restify-errors": "^8.0.1",
     "simple-statistics": "^7.0.5",
@@ -42,6 +43,8 @@
     "@types/async": "^3.0.1",
     "@types/bunyan": "1.8.6",
     "@types/chai": "^4.1.7",
+    "@types/connect": "^3.4.32",
+    "@types/express": "^4.17.0",
     "@types/faker": "^4.1.5",
     "@types/ioredis": "4.0.13",
     "@types/mathjs": "6.0.0",
