--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "argon2": "0.24.0",
     "async": "^3.1.0",
     "faker": "^4.1.0",
-    "glaucoma-risk-calculator-engine": "https://api.github.com/repos/glaucoma/glaucoma-risk-calculator-engine-dist/tarball",
+    "glaucoma-risk-calculator-engine": "glaucoma/glaucoma-risk-calculator-engine-dist",
     "hiredis": "^0.5.0",
     "ioredis": "^4.14.0",
     "mathjs": "^6.0.3",
@@ -35,7 +35,7 @@
     "restify": "^8.4.0",
     "restify-errors": "^8.0.1",
     "simple-statistics": "^7.0.5",
-    "ttest": "https://api.github.com/repos/SamuelMarks/ttest/tarball/typescript",
+    "ttest": "SamuelMarks/ttest#typescript",
     "tv4": "^1.3.0",
     "uuid": "^3.3.2"
   },
