[.travis.yml] Added TypeScript fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ before_script:
     - psql -c 'create database travis_ci_test;' -U postgres
 
 script:
+    - "sed -i -e 's/_length: number;/_length!: number;/' -e 's/_cache_quartiles: {[q: number]: number;};/_cache_quartiles!: {[q: number]: number;};/' node_modules/summary/summary.ts"
     - tsc
     - npm test
 
