--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ build/Release
 # Dependency directory
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
+
+# Coverage
+.nyc_output
