--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glaucoma-risk-calculator-rest-api",
-  "version": "0.0.59",
+  "version": "0.0.60",
   "description": "REST API backend written on Node.JS in TypeScript with restify and waterline.",
   "repository": {
     "type": "git",
@@ -16,60 +16,60 @@
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
-    "@offscale/custom-restify-errors": "^0.0.6",
-    "@offscale/nodejs-utils": "^0.0.9",
-    "@offscale/orm-mw": "^0.0.8",
-    "@offscale/restify-validators": "^0.0.3",
-    "@offscale/routes-merger": "^0.0.4",
-    "ajv": "^6.10.2",
-    "argon2": "0.24.1",
-    "async": "^3.1.0",
+    "@offscale/custom-restify-errors": "^0.0.12",
+    "@offscale/nodejs-utils": "^0.0.16",
+    "@offscale/orm-mw": "^0.0.16",
+    "@offscale/restify-validators": "^0.0.9",
+    "@offscale/routes-merger": "^0.0.12",
+    "ajv": "^6.12.2",
+    "argon2": "0.26.2",
+    "async": "^3.2.0",
     "faker": "^4.1.0",
     "glaucoma-risk-calculator-engine": "glaucoma/glaucoma-risk-calculator-engine-dist",
-    "hiredis": "^0.5.0",
-    "ioredis": "^4.14.1",
-    "mathjs": "^6.2.1",
-    "morgan": "^1.9.1",
-    "pg": "^7.12.1",
-    "redis": "^2.8.0",
+    "ioredis": "^4.17.3",
+    "mathjs": "^7.0.1",
+    "morgan": "^1.10.0",
+    "pg": "^8.2.1",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
-    "restify": "^8.4.0",
-    "restify-errors": "^8.0.1",
-    "simple-statistics": "^7.0.5",
+    "restify": "^8.5.1",
+    "restify-errors": "^8.0.2",
+    "simple-statistics": "^7.1.0",
     "ttest": "SamuelMarks/ttest#typescript",
     "tv4": "^1.3.0",
-    "uuid": "^3.3.3"
+    "typeorm": "^0.2.25",
+    "uuid": "^8.1.0"
   },
   "devDependencies": {
-    "@types/async": "^3.0.1",
+    "@types/async": "^3.2.3",
     "@types/bunyan": "1.8.6",
-    "@types/chai": "^4.2.3",
-    "@types/connect": "^3.4.32",
-    "@types/express": "^4.17.1",
-    "@types/faker": "^4.1.5",
-    "@types/ioredis": "4.0.17",
-    "@types/mathjs": "6.0.2",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^12.7.5",
-    "@types/redis": "^2.8.13",
-    "@types/restify": "^8.4.0",
+    "@types/chai": "^4.2.11",
+    "@types/connect": "^3.4.33",
+    "@types/express": "^4.17.6",
+    "@types/faker": "^4.1.12",
+    "@types/ioredis": "4.16.5",
+    "@types/mathjs": "6.0.5",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^14.0.13",
+    "@types/redis": "^2.8.22",
+    "@types/restify": "^8.4.2",
     "@types/restify-errors": "^4.3.3",
-    "@types/superagent": "^4.1.3",
-    "@types/supertest": "^2.0.8",
+    "@types/superagent": "^4.1.7",
+    "@types/supertest": "^2.0.9",
     "@types/tv4": "^1.2.29",
-    "@types/uuid": "^3.4.5",
+    "@types/uuid": "^8.0.0",
     "bunyan": "^1.8.12",
     "chai": "^4.2.0",
     "chai-json-schema": "^1.5.1",
     "chai-json-schema-ajv": "^5.0.0",
-    "coveralls": "^3.0.6",
-    "mocha": "^6.2.0",
+    "coveralls": "^3.1.0",
+    "mocha": "^8.0.1",
     "mocha-pretty-bunyan": "^1.1.1",
     "mocha-pretty-bunyan-nyan": "^1.0.4",
-    "nyc": "^14.1.1",
-    "source-map-support": "^0.5.13",
+    "nyc": "^15.1.0",
+    "source-map-support": "^0.5.19",
     "supertest": "^4.0.2",
-    "ts-node": "^8.4.1",
-    "typescript": "~3.6.3"
+    "ts-node": "^8.10.2",
+    "typescript": "~3.9.5"
   }
 }
